<resources>
    <string name="app_name">Media Center</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_watch" translatable="false">WatchActivity</string>

    <!-- Strings related to Settings -->
    <string name="pref_mediacenter_path">Media Center Path</string>
    <string name="title_home">Home</string>
    <string name="title_movies">Movies</string>
    <string name="title_music">Music</string>
    <string name="title_series">Series</string>
    <string name="label_year">Year:</string>
    <string name="label_director">Director:</string>
    <string name="label_autor">Autor:</string>
    <string name="label_actors">Actors:</string>
    <string name="label_summary">Summary:</string>
    <string name="label_last_movies">Last Movies</string>
    <string name="label_last_series">Last Series</string>
    <string name="label_last_music">Last Music</string>
    <string name="label_watch">Watch</string>
    <string name="label_tracks">Tracks</string>
    <string name="label_episodes">Episodes</string>
    <string name="label_season">Season:</string>
    <string name="label_author">Author:</string>

</resources>
