<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single"
        android:id="@+id/group_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group_media">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_movies"
            android:title="@string/title_movies" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_menu_series"
            android:title="@string/title_series" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/title_music" />
    </group>

</menu>
