<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utbm.lo52.CustomAndroid.mediacenter.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal|bold"
                android:padding="10dp"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/label_last_movies"
                        android:paddingLeft="7dp"
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:id="@+id/label_home_movies"
                        android:onClick="onClickDispatcher" />

                    <android.support.v7.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/recyclerViewHomeMovies"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/label_last_series"
                        android:paddingLeft="9dp"
                        android:paddingTop="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:id="@+id/label_home_series"
                        android:onClick="onClickDispatcher"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewHomeSeries"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/label_last_music"
                        android:paddingLeft="7dp"
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:id="@+id/label_home_music"
                        android:onClick="onClickDispatcher"/>
                    <android.support.v7.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/recyclerViewHomeMusics"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"/>
                </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
