<?xml version="1.0" encoding="utf-8"?>


            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        app:srcCompat="@drawable/ic_menu_movies"
                        android:id="@+id/music_illustration"
                        android:layout_marginRight="20dp"
                        android:layout_width="150dp"
                        android:layout_height="150dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <TextView
                            android:text="@string/label_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_year"
                            android:layout_marginTop="12dp"
                            android:textStyle="normal|bold" />

                        <TextView
                            android:text="year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/music_year" />

                        <TextView
                            android:text="@string/label_autor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_autor"
                            android:layout_marginTop="12dp"
                            android:textStyle="normal|bold"/>

                        <TextView
                            android:text="autor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/music_autor" />


                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:text="@string/label_tracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_summary"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:textStyle="normal|bold"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/music_detail_sub_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </LinearLayout>
